# toy_fastapi_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  example_profile.html  gunicorn.conf.py  pyproject.toml  requirements.txt
scripts/: start_resources.sh  stop_resources.sh
src/: app.py  broker.py  dependencies.py  loggers.py  middleware.py  models.py  responses.py  routes.py  services.py  settings.py  utils.py  uvicorn_utils.py
tests/: locust.conf  locustfile.py  test.py  test_app.py  test_textsplitter.py
